security(jca): drop the module check and keep the search
The check asked whether java.base exports sun.security.util to the
provider's module, so the export clause in module-info.java silently
decided which providers could be handed a private key. That clause exists
to control API access. Giving it a second job puts a security boundary in
a file that never mentions it, where an unrelated edit moves it and
nothing in review would show that.

What remains is the search itself, which is what makes this work
regardless of provider order. Only the JDK's own key classes implement
the interface, so a provider can offer the algorithm and still return a
key this class cannot use. Trying each candidate in turn means success
does not depend on where the deployer happened to put a provider.

Every provider tried does see the private key on the way past. That is
the cost of searching instead of naming one provider, and it is recorded
in the JEP rather than hidden behind a filter.

ForeignPrivateKey now installs a provider that offers the algorithm and
cannot answer, ahead of the one that can, and requires the search to
reach past it.

Refs: TASK-00094, ADR-00007