@@ -49,13 +49,11 @@ import sun.security.pkcs.PKCS8Key;
  *          exposes no API for. A private key that is not one of the JDK's
  *          own key classes must still work, whether or not its PKCS #8
  *          encoding carries the matching public key.
- *          The search must also skip providers that could not implement the
- *          JDK-internal derivation interface, since they can never answer
- *          and would be shown the private key for nothing.
+ *          The search must also survive a provider that offers the
+ *          algorithm and cannot answer, without depending on where that
+ *          provider sits in the installed list.
  * @modules java.base/sun.security.pkcs
  * @run main/othervm ForeignPrivateKey
- * @run main/othervm --add-exports java.base/sun.security.util=ALL-UNNAMED
- *      ForeignPrivateKey exported
  */
 public class ForeignPrivateKey {
 
@@ -134,12 +132,12 @@ public class ForeignPrivateKey {
      * Decapsulates with a stand-in built over the given encoding and checks
      * the shared secret against the one the JDK's own key produces.
      *
-     * @param expectHandOver whether the private key is expected to reach
-     *        another provider, which it must when the encoding carries no
-     *        public key and must not when it does
+     * The watcher is expected to be reached, because it offers the
+     * algorithm and sits ahead of the provider that can answer. What must
+     * not happen is the search stopping there.
      */
-    private static void check(String label, byte[] encoding, KeyPair kp,
-            boolean expectHandOver) throws Exception {
+    private static void check(String label, byte[] encoding, KeyPair kp)
+            throws Exception {
         watcherSawPrivateKey = false;
         PrivateKey stranger = foreign((ECPrivateKey) kp.getPrivate(), encoding);
 
@@ -156,28 +154,21 @@ public class ForeignPrivateKey {
             throw new Exception(label + ": shared secrets differ between a "
                     + "JDK private key and an equivalent foreign one");
         }
-        if (watcherSawPrivateKey != expectHandOver) {
-            throw new Exception(label + ": expected the private key to "
-                    + (expectHandOver ? "reach" : "stay away from")
-                    + " another provider, but it did the opposite");
+        if (!watcherSawPrivateKey) {
+            throw new Exception(label + ": the provider that cannot answer "
+                    + "was never reached, so this run proved nothing about "
+                    + "the search continuing past it");
         }
-        System.out.println(label + ": secret matches, private key "
-                + (watcherSawPrivateKey ? "was" : "was not")
-                + " handed to another provider");
+        System.out.println(label + ": secret matches, and the search "
+                + "continued past a provider that could not answer");
     }
 
     public static void main(String[] args) throws Exception {
-        // The watcher lives on the class path, in the unnamed module. Out of
-        // the box java.base does not export sun.security.util to it, so it
-        // could never return an InternalPrivateKey and the search must skip
-        // it. The second run passes --add-exports, which is a deployer
-        // saying they want their own provider to take part; the search must
-        // then include it.
-        boolean watcherIsCapable = args.length > 0
-                && args[0].equals("exported");
-        System.out.println(watcherIsCapable
-                ? "run 2: sun.security.util is exported to the class path"
-                : "run 1: sun.security.util is not exported to the class path");
+        // The watcher offers KeyFactory.EC and cannot answer, and it is
+        // installed ahead of SunEC. The search has to reach SunEC anyway.
+        // It does see the private key on the way past, which is the cost of
+        // searching rather than naming a provider, and is recorded in the
+        // JEP rather than hidden here.
 
         KeyPairGenerator kpg = KeyPairGenerator.getInstance("EC");
         kpg.initialize(new ECGenParameterSpec("secp256r1"));
@@ -198,16 +189,13 @@ public class ForeignPrivateKey {
         Security.insertProviderAt(new Watcher(), 1);
         try {
             // Both encodings take the same route: the public key is
-            // derived, which means translating the key through another
-            // provider. Version 2 carries the public key in the encoding,
-            // and this class deliberately does not read it; see the JEP
-            // section "Why the encoding shortcut was withdrawn". Both are
-            // kept as inputs so that a version 2 encoding is covered.
-            //
-            // The watcher is reached only when it could actually have
-            // answered, which is what the module filter decides.
-            check("PKCS#8 v1", version1, kp, watcherIsCapable);
-            check("PKCS#8 v2", version2, kp, watcherIsCapable);
+            // derived by translating the key through another provider.
+            // Version 2 carries the public key in its encoding and this
+            // class deliberately does not read it; see the JEP section
+            // "Why the encoding shortcut was withdrawn". Both are kept as
+            // inputs so a version 2 encoding stays covered.
+            check("PKCS#8 v1", version1, kp);
+            check("PKCS#8 v2", version2, kp);
         } finally {
             Security.removeProvider("Watcher");
         }
